<resources>
    <string name="app_name">Activity</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiY2xhbmsiLCJhIjoiY2s4bHNzcTBxMDRuNDNncG4zdzB3eW1pNyJ9.97YjwyOf7JiByL47sfeypA</string>
    <string name="getStart">시작하기</string>
    <string name="googleAccount">Google 계정</string>
    <string name="menu">메뉴</string>
    <string name="profile">프로필</string>
    <string name="notification">알림</string>
    <string name="setting">내 정보 설정</string>
    <string name="ok">확인</string>
    <string name="logout">Log Out</string>
    <string name="friends">친구</string>
    <string name="login">로그인</string>
    <string name="forgotPassword">비밀번호를 잊으셨나요?</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="haveNoAccount">계정이 없으신가요?</string>
    <string name="createAccount">가입하기</string>
    <string name="backButton">뒤로가기</string>
    <string name="register">계정 생성</string>
    <string name="userName">이름</string>
    <string name="alreadyHaveAccount">이미 계정이 있으신가요?</string>
    <string name="findPassword">비밀번호 찾기</string>
    <string name="profileSetting">내 정보 설정</string>
    <string name="profileImage">프로필이미지</string>
    <string name="editIcon">이미지수정 아이콘</string>
    <string name="allowPush">푸시 알림</string>
    <string name="allowRequest">친구추가 허용</string>
    <string name="allowLocation">위치 공유</string>
    <string name="seenAll">모두 읽음</string>
    <string name="friendRequest">친구 요청</string>
    <string name="searchPlace">장소 검색</string>
    <string name="destination">목적지</string>
    <string name="chat">대화</string>
    <string name="members">멤버</string>
</resources>
