<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_view"
    android:layout_width="255dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="38dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_menu"
        android:drawablePadding="12dp"
        android:fontFamily="@font/jsdongkang_regular"
        android:text="@string/menu"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/drawer_profile"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="54dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/utoimage_light"
                android:text="@string/profile"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_friends"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="29dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_friends"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/utoimage_light"
                android:text="@string/friends"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_notification"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="29dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification_bell"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/utoimage_light"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_setting"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="29dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_setting"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/utoimage_light"
                android:text="@string/setting"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="30dp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/drawer_logout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/jsdongkang_regular"
                android:text="@string/logout"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:src="@drawable/ic_logout_button"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>